--- a/.gitignore
+++ b/.gitignore
@@ -7,9 +7,8 @@
 # Ignore bundler config.
 /.bundle
 
-# Ignore the default SQLite database.
-/db/*.sqlite3
-/db/*.sqlite3-journal
+# Ignore some database stuff.
+/db/*.yml
 
 # Ignore all logfiles and tempfiles.
 /log/*
